# Imagery-ERP

./: .gitignore  CMakeLists.txt  README.md  app_config.yaml
database/: schema.sql  seed_data.sql
docs/: DEVELOPMENT_LOG.md  DEVELOPMENT_OPTIONS.md  UAT_TESTING.md  USER_GUIDE.md
model/: CQ_app_model.yaml  app_model.yaml
resources/: style.css
src/: App.cpp  App.h  AppConfig.h  ChangeOrderView.cpp  ChangeOrderView.h  ComponentView.cpp  ComponentView.h  CostingView.cpp  CostingView.h  DashboardView.cpp  DashboardView.h  DataModels.h  DataProviderFactory.cpp  EnterpriseDataProvider.h  IDataProvider.h  MaterialView.cpp  MaterialView.h  PdfExporter.cpp  PdfExporter.h  QuoteView.cpp  QuoteView.h  ResourceView.cpp  ResourceView.h  SprintView.cpp  SprintView.h  StandaloneDataProvider.h  main.cpp
